# gmaps-historie-

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  build-update-package.bat  build-windows-exe.bat  build-windows-installer.bat  docker-compose.yml  eslint.config.mjs  gmaps-historie.spec  installer.iss  package-lock.json  package.json  playwright.config.mjs  pyproject.toml  requirements.txt  run.py  start-windows.bat
.claude/skills/dev/: SKILL.md
.github/workflows/: ci.yml  windows-build.yml
app/: cities.py  common.py  db.py  importer.py  main.py  places.py  trips.py
app/core/: __init__.py  auth.py  backup.py  config.py  events.py  logging.py  rate_limit.py  runtime.py  updater.py
app/routers/: __init__.py  backup.py  export.py  import_.py  map_data.py  pages.py  profiles.py  quality.py  stats.py  sync.py
app/services/: aggregations.py  demo.py  geo.py  quality.py  simplify.py
app/static/: app.js  charts.js  common.js  day-playback.js  icons.js  import-ui.js  index.html  kniha.css  kniha.html  kniha.js  manifest.webmanifest  map-filters.js  map-tools.js  places-ui.js  style.css  sw.js  sync-events.js  timelapse.js  year-card.js
docs/: API.md  NAVOD.md  WINDOWS.md  WINDOWS_INSTALLER.md
installer/: Aktualizovat.bat  dokonceni-cs.txt  licence-cs.txt  uvod-cs.txt
scripts/: make_screenshots.mjs  make_update_package.py  seed_demo.py  smoke_test.py  update_windows.py
tests/: conftest.py  fixtures.py  test_api.py  test_auth.py  test_importer.py  test_simplify.py  test_trips.py  test_updater.py
tests/e2e/: app.spec.mjs
