[project]
name = "gmaps-historie"
version = "2.1.0"
description = "Self-hosted nástroj pro historii polohy z Google Maps"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff"]

[tool.pytest.ini_options]
filterwarnings = [
    # starlette testclient si stěžuje na httpx – náhrada zatím není stabilní
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = [
    "E501",   # dlouhé řádky hlídáme jen orientačně (SQL/texty)
    "B008",   # fastapi Query(...) v default argumentech je idiom
    "SIM108", # ternár není vždy čitelnější
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # sys.path setup před importy aplikace
